# exam-tasks

./: .gitignore  CMakeLists.txt  README.md  _5_replaceDigits.c  description21.txt  description9.txt  task23.c  task26.c  task3.c  task40.c  task50.c  task6.c  task78.c  task92.c  tasks.md
descriptions/: description105.txt  description19.txt  description20.txt  description57.txt
tasks/: task101.c  task108.c  task112.c  task15.c  task17.c  task2.c  task30.c  task36.c  task39.c  task44.c  task67.c  task8.c  task80.c  task86.c  task92.c
